# InfinityConnect-Windows

./: .gitignore  ARCHITECTURE.md  INSTALLER.md  README.md  UPDATER.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
installer/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
installer/scripts/: build-payload.ps1
installer/src/: App.tsx  BrandRail.tsx  api.ts  styles.css  theme.ts  ui.tsx
installer/src-tauri/: Cargo.toml  build.rs  installer.manifest  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: install.rs  lib.rs  main.rs  shortcut.rs  uninstall.rs
installer/src/screens/: Done.tsx  Progress.tsx  Welcome.tsx
scripts/: fetch-binaries.ps1  gen-installer-art.py  sign.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/src/: apps.rs  commands.rs  connection.rs  device.rs  elevation.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: dto.rs  mod.rs
src-tauri/src/engine/: hysteria2_config.rs  mod.rs  selector.rs  singbox_config.rs  xray_config.rs
src-tauri/src/ping/: icmp.rs  mod.rs  model.rs  proxy.rs
src-tauri/src/routing/: mod.rs  perapp.rs
src-tauri/src/sidecar/: hysteria.rs  mod.rs  singbox.rs  xray.rs
src-tauri/src/store/: dpapi.rs  mod.rs
src-tauri/src/subscription/: hysteria2_uri.rs  mod.rs  uri.rs  vless_uri.rs
src-tauri/src/tunnel/: killswitch.rs  mod.rs  routes.rs
src/api/: commands.ts  updater.ts
src/components/: AppShell.tsx  ConnectHero.tsx  ErrorBoundary.tsx  Flag.tsx  MeshBackground.tsx  Scaffold.tsx  UpdateBanner.tsx  ui.tsx
src/data/: appPresets.ts
src/screens/: AuthScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  SettingsScreens.tsx
src/state/: appStore.ts
src/theme/: colors.ts
src/util/: countryFlag.ts  format.ts  keyStatus.ts
