[package]
name = "infinity-connect"
version = "1.0.0"
description = "InfinityConnect — Windows VPN client"
authors = ["Infinity Labs"]
edition = "2021"

# Библиотека для мобильной/десктоп-обвязки Tauri + бинарь.
[lib]
name = "infinity_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
# Авто-обновление приложения (GitHub Releases + подписанные артефакты).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP-клиент к серверу (rustls — без OpenSSL-зависимости на Windows).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2"
base64 = "0.22"
# Каталоги %APPDATA% и т.п.
dirs = "5"
tauri-plugin-deep-link = "2.4.9"
# feature "deep-link" ОБЯЗАТЕЛЬНА: без неё single-instance на Windows не
# передаёт deep-link URL в argv колбэка (второй экземпляр молча закрывается).
tauri-plugin-single-instance = { version = "2.4.3", features = ["deep-link"] }

# Windows-специфика: DPAPI (шифрование токенов), MachineGuid (HWID), версия ОС.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
winreg = "0.52"

[features]
# по умолчанию — прод-профиль без кастом-протокола.
custom-protocol = ["tauri/custom-protocol"]
