[package]
name = "infinity-setup"
version = "1.0.0"
description = "Установщик Infinity Connect"
authors = ["Infinity Labs"]
edition = "2021"

[lib]
name = "infinity_setup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Распаковка встроенного payload-архива (single-file установщик). Без компрессии
# на нашей стороне — payload уже содержит сжатые exe/dat, store быстрее.
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
winreg = "0.52"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
